--- a/platformio.ini
+++ b/platformio.ini
@@ -9,3 +9,5 @@ build_flags =
     -DARDUINO_USB_CDC_ON_BOOT=1
     -DCONFIG_ARDUINO_LOOP_STACK_SIZE=16384
     -DCONFIG_FREERTOS_UNICORE=1
+lib_deps = 
+    ArduinoJson
